Bug 302137 - Cannot save new message list theme from one session to another
Summary: Cannot save new message list theme from one session to another
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.8.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-18 17:10 UTC by Tudor Protopopescu
Modified: 2012-08-03 15:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tudor Protopopescu 2012-06-18 17:10:04 UTC
After creating and applying a new message list theme in View->Message List->Theme->Configure the theme disappears after closing and restarting kmail2 (or kontact). This happens with a new theme created from scratch. The new theme is applied, but is not saved for the next session. 

Reproducible: Always

Steps to Reproduce:
1. Go to View->Message List->Theme->Configure 
2. Create a new theme
3. Apply the theme
4. Close then restart kmail/kontact.
Actual Results:  
Message list theme has reverted to one of the preset themes (classic in my case). The new theme is gone from the list of themes in View->Message List->Theme. 

Expected Results:  
The new theme should still be in the list of themes and still be applied upon restarting kmail. 

In addition to not saving new themes kmail does not properly save and apply modifications to the preset themes. E.g. clone one of the preset themes, and then modify it (in my case try moving the columns around, so that sender comes before subject for example). Apply the theme - the column sort order is not applied. Go back to the configuration dialog and notice that the column positions were not saved. Moreover some columns do not become visible even if 'column properties' are set to 'visible by default'. I wanted to create custom theme as a workaround to not being able to modify the preset themes, or clones of them. 

Related to this seems to be that in the message list reordering the columns is not saved from session to session. So I can't just reorder the columns as I like and expect the changes to be there next time I start kmail.
Comment 1 Laurent Montel 2012-07-20 21:33:04 UTC
I confirm it 
will look at it
Comment 2 Laurent Montel 2012-07-20 21:59:34 UTC
I fixed first part of bug in 0b02e747112cd0151ebd488e1fc536ae33e6d867

Fixed in 4.8.5

Will look at other bug
Comment 3 Laurent Montel 2012-07-20 22:00:34 UTC
Git commit 4d0efbc1ec7fb5d6e01bcbf7ff73ff018f7b56c0 by Montel Laurent.
Committed on 20/07/2012 at 23:56.
Pushed by mlaurent into branch 'KDE/4.8'.

First item of Bug 302137 fixed - Cannot save new message list theme from one session to

another
(cherry picked from commit 0b02e747112cd0151ebd488e1fc536ae33e6d867)

M  +1    -0    messagelist/core/theme.cpp

http://commits.kde.org/kdepim/4d0efbc1ec7fb5d6e01bcbf7ff73ff018f7b56c0
Comment 4 Laurent Montel 2012-07-22 10:10:24 UTC
'Moreover some columns do not become visible even if 'column properties' are set to 'visible by default' do you have infos about specific column which is not visible ?
Comment 5 Tudor Protopopescu 2012-07-23 00:16:03 UTC
This is what I was trying out: 

Created a clone of the Classic Theme. In the theme configuration dialog, the appearance tab, there is the list of columns for that view. Right clicking on a column and selecting `column properties' one of the options is `visible by default'. Selecting this option for a column that does not have it already checked does not make the column visible. I tried this specifically with the `Tag', `Attachment', `Signature', `Importance', `Size', `Read/Unread' columns. In the configuration dialog view preview the column says, e.g. `Attachment (Visible)' but the column does not become visible in the message list, after pressing 'OK' and returning to the message list, or after switching to another theme and switching back, or restarting Kontact. The column properties are saved from one session to the next, though. 

To make these columns visible I have to right click on the column headers in the message list and select the columns from the menu. Once visible in the message list the newly visible columns remain visible from one session to the next. But any re-ordering of the columns, e.g. making the 'Attachment' column the first column on the left is not preserved from session to session.
Comment 6 Laurent Montel 2012-07-23 05:21:36 UTC
ok will investigate more.
Thanks for infos
Comment 7 Laurent Montel 2012-07-24 07:58:40 UTC
Ok for "visible" it's stored it's not a problem.
But it's not refresh default column.
It's the problem
You need to click on "show default column"

For order it's right it's not restore/stored.
Comment 8 Laurent Montel 2012-08-03 15:18:41 UTC
Git commit 08fa8e34438cb1729c27d061dac31b42d968f389 by Montel Laurent.
Committed on 03/08/2012 at 17:17.
Pushed by mlaurent into branch 'master'.

Fix Bug 302137 - Cannot save new message list theme from one session to

another

FIXED-IN: 4.10

M  +32   -12   messagelist/pane.cpp

http://commits.kde.org/kdepim/08fa8e34438cb1729c27d061dac31b42d968f389
Comment 9 Laurent Montel 2012-08-03 15:19:07 UTC
Now we can save/restore header order.