Fix Bug 302137 - Cannot save new message list theme from one session to

another

FIXED-IN: 4.10
BUG: 302137